--- a/contact.html
+++ b/contact.html
@@ -1,55 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contacts</title>
-    <link rel="stylesheet" href="contact.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>contacts</title>
+        <link rel="stylesheet" href="contact.css">
+    </head>
 
-<body>
+    <body>
 
-    <div class="contact-section">
-        <div class="Kitisuru">
-            <h1>Kitisuru</h1>
-           <p> <a href="https://www.google.com/maps/place/Ankole+Grill+Kitisuru/@-1.2406933,36.7874133,17z/data=!3m1!4b1!4m6!3m5!1s0x182f1700463776b5:0xf0eb54364bfb4030!8m2!3d-1.2406933!4d36.7874133!16s%2Fg%2F11mhq4xbsk?entry=ttu&g_ep=EgoyMDI1MDQxNC4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D" id="text-color">Address: 0.6A, Kitisuru Rd,Nairobi </a><br>
-                Hours:Open 9 am . Closes 11 pm<br>
-                Booking & Orders:<br>
-                0703212121 / 0701138345<br>
-                Email:sales@ankole.co.ke<br>
-                events@ankole.co.ke
-            </p>
+        <div class="contact-section">
+            <div class="Kitisuru">
+                <h1>Kitisuru</h1>
+                <p> <a
+                        href="https://www.google.com/maps/place/Ankole+Grill+Kitisuru/@-1.2406933,36.7874133,17z/data=!3m1!4b1!4m6!3m5!1s0x182f1700463776b5:0xf0eb54364bfb4030!8m2!3d-1.2406933!4d36.7874133!16s%2Fg%2F11mhq4xbsk?entry=ttu&g_ep=EgoyMDI1MDQxNC4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D"
+                        id="text-color">Address: 0.6A, Kitisuru Rd,Nairobi
+                    </a></p>
+                <p>Hours:Open 9 am . Closes 11 pm </p>
+                <p> Booking & Orders:</p>
+                <p> 0703212121 / 0701138345 </p>
+                <p> Email:sales@ankole.co.ke </p>
+                <p> events@ankole.co.ke</p>
+
+            </div>
+
+            <div class="Kilimani">
+                <h1>Kilimani</h1>
+                <p><a
+                        href="https://www.google.com/maps/place/Ankole+Grill+Kitisuru/@-1.2406933,36.7874133,17z/data=!3m1!4b1!4m6!3m5!1s0x182f1700463776b5:0xf0eb54364bfb4030!8m2!3d-1.2406933!4d36.7874133!16s%2Fg%2F11mhq4xbsk?entry=ttu&g_ep=EgoyMDI1MDQxNC4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D"
+                        id="text-color">Address: PQ6M+R2X, Galana Rd,</a></p>
+                <p> Nairobi</p>
+                <p>Hours:Open</p>
+                <p>Mon-Fri: 7:30 am . Closes 11 pm</p>
+                <p> Sat & Sun: 9:00am - 11pm</p>
+                <p>Bookings & Orders:</p>
+                <p> 0710202020</p>
+                <p> Email:sales@ankole.co.ke</p>
+                <p> events@ankole.co.ke</p>
+
+            </div>
+
         </div>
 
-        <div class="Kilimani">
-          <h1>Kilimani</h1>
-          <p><a href="https://www.google.com/maps/place/Ankole+Grill+Kitisuru/@-1.2406933,36.7874133,17z/data=!3m1!4b1!4m6!3m5!1s0x182f1700463776b5:0xf0eb54364bfb4030!8m2!3d-1.2406933!4d36.7874133!16s%2Fg%2F11mhq4xbsk?entry=ttu&g_ep=EgoyMDI1MDQxNC4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D" id="text-color">Address: PQ6M+R2X, Galana Rd,</a><br>
-             Nairobi<br>
-             Hours:Open<br>
-             Mon-Fri: 7:30 am . Closes 11 pm<br>
-             Sat & Sun: 9:00am - 11pm<br>
-             Bookings & Orders:<br>
-             0710202020<br>
-             Email:sales@ankole.co.ke<br>
-              events@ankole.co.ke
-          </p>
-
-
-        </div>
-
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-</body>
+    </body>
 
 </html>
