--- a/events.html
+++ b/events.html
@@ -13,8 +13,8 @@
 
     <div class="events-container">
         <div class="events-page">
-            <img src="accra.jpg">
-            <div class="text">
+            <img src="images/accra.jpg">
+            <div  class="text">
                 <p>pavilion</p>
                 <h3>Accra</h3>
                 <p>Pax: 8-10</p>
@@ -24,7 +24,7 @@
         </div>
 
         <div class="events-page">
-            <img src="night.jpg">
+            <img src="images/night.jpg">
             <div class="texts">
                 <p>pavilion</p>
                 <h3>Nairobi</h3>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="events-page">
-            <img src="record.jpeg">
+            <img src="images/record.jpeg">
             <div class="textss">
                 <p>pavilion</p>
                 <h3>Nairobi</h3>
