--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="image">
         <img src="https://cdn.prod.website-files.com/65aa1f78e2380ad0548de50d/65c0b0524cdc940f7455af22_logo.svg">
 
-        <h1>Welcome</h1>
+        <h1>welcome</h1>
     </div>
     <div class="image">
         <img src="https://cdn.prod.website-files.com/65aa1f78e2380ad0548de50d/65c0b0524cdc940f7455af22_logo.svg">
@@ -25,7 +25,7 @@
     </div>
     <div class="image">
         <img src="https://cdn.prod.website-files.com/65aa1f78e2380ad0548de50d/65c0b0524cdc940f7455af22_logo.svg">
-        <h1>Experience</h1>
+        <h1>experience</h1>
     </div>
     <div class="image">
         <img src="https://cdn.prod.website-files.com/65aa1f78e2380ad0548de50d/65c0b0524cdc940f7455af22_logo.svg">
