--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
            <li> <a>Home</a></li> 
            <li><a href="menu.html">Menu</a></li> 
 
-           <li> <a href="review.html">Reviews</a></li> 
+           <li> <a href="reviews.html">Reviews</a></li> 
            <li> <a href="events.html">Events</a></li> 
            <li><a href="live.html">Live</a></li> 
            <li> <a href="contact.html">Contacts</a></li> 
