--- a/live.html
+++ b/live.html
@@ -21,26 +21,53 @@
             <div class="Acoustic">
 
                 <div class="fadhille">
-                    <p>April 30,2025</p>
-                    <h3>Live Acoustic Wednesday - FADHILEE</h3>
+                    <a href="fadhille.html"><img src="images/fadhilee.jpg"></a>
+                    <p>April 30, 2025</p>
+                    <br>
+                    <a href="fadhille.html" id="artist-fadhile">Live Acoustic
+                        Wednesday-FADHILEE </a>
 
                 </div>
+                <br> <br> <br>
 
-                <div class="MUSHROOMS">
-                    <p>April 25,2025</p>
-                    <h3>Live Acoustic Wednesday - THEM MUSHROOMS</h3>
+                <div class="koko">
+                    <a href="koko.html"><img src="images/koko.jpg"></a>
+                    <p>April 9,2025</p>
+                    <br>
+                    <a href="koko.html" id="artist-koko">Live Acoustic Wednesday
+                        - KOKO KOSESO </a>
 
                 </div>
-
-                <div class="muguna">
+                <br> <br> <br>
+                <div class="shitaqua">
+                    <a href="shitaqua.html"><img src="images/shitaqua.jpg"></a>
                     <p>April 16,2025</p>
-                    <h3>Live Acoustic Wednesday - JACK MUGUNA</h3>
+                    <br>
+                    <a href="shitaqua.html" id="artist-shitaq">Live Acoustic
+                        Wednesday - SHITAQUA</a>
 
                 </div>
 
             </div>
-
         </div>
+            <div class="navigationbar">
+                <nav>
+                    <ul>
+                        <li><i class="fa fa-bars"></i></li>
+                        <i class="fa-solid fa-clock-two-thirty"></i>
+                        <li> <a>Home</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+
+                        <li> <a href="reviews.html">Reviews</a></li>
+                        <li> <a href="events.html">Events</a></li>
+                        <li><a href="live.html">Live</a></li>
+                        <li> <a href="contact.html">Contacts</a></li>
+                        <li> <a href="reservation.html">Reservations</a></li>
+                    </ul>
+                </nav>
+
+            </div>
+        
 
     </body>
 </html>
