--- a/reservation.html
+++ b/reservation.html
@@ -1,64 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="reservation.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="reservation.css">
+    </head>
 
-<body>
+    <body>
 
-    <div class="reservation">
-        <div class="opentext">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoj538u5yhV08qR3ohmFqzqCojOTlz9Dr70W-qwSvBpGTXb3XA" id="opentext_img">
-            <p>Karibu</p>
-            <h1>Reservation</h1>
+        <div class="reservation">
+            <div class="opentext">
+                <img
+                    src=" images/tropical-leaves-background-jungle-rainforest-plants-wallpaper-generative-ai_691560-9536.avif"
+                    id="opentext_img">
+                <p>Karibu</p>
+                <h1>Reservation</h1>
+            </div>
+
+            <div class="reservation-form">
+                <form>
+                    <label>Name</label>
+                    <br>
+                    <input placeholder="Enter your first name" id="input">
+                    <br><br>
+                    <label>Location</label>
+                    <br>
+                    <input placeholder="Kitisiru(Open 9 am . Close 11 pm)"
+                        id="input">
+                    <br><br>
+                    <label>Email Address</label>
+                    <br>
+                    <input placeholder="e.ginfo@email.com" id="input">
+                    <br><br>
+
+                    <label>Tel/Cell</label>
+                    <br>
+                    <input placeholder="e.g 0700000000" id="input">
+                    <br><br>
+
+                    <label>Number of Guests</label>
+                    <br>
+                    <input placeholder="(maximum of 8 guests only)" id="input">
+                    <br><br>
+
+                    <label>Date</label>
+                    <br>
+                    <input placeholder="date" type="date" id="input">
+                    <br><br>
+
+                    <label>Time</label>
+                    <br>
+                    <input placeholder="time" type="time" id="input">
+                    <br><br>
+
+                    <button class="submission">Submit</button>
+
+                </form>
+            </div>
+
         </div>
 
-        <div class="reservation-form">
-            <form>
-                <label>Name</label>
-                <br>
-                <input placeholder="Enter your first name" id="input">
-                <br><br>
-                <label>Location</label>
-                <br>
-                <input placeholder="Kitisiru(Open 9 am . Close 11 pm)" id="input" >
-                <br><br>
-                <label>Email Address</label>
-                <br>
-                <input placeholder="e.ginfo@email.com" id="input">
-                <br><br>
+        <div class="navigationbar">
+            <nav>
+                <ul>
+                    <li><i class="fa fa-bars"></i></li>
+                    <i class="fa-solid fa-clock-two-thirty"></i>
+                    <li> <a>Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
 
-                <label>Tel/Cell</label>
-                <br>
-                <input placeholder="e.g 0700000000" id="input">
-                <br><br>
+                    <li> <a href="reviews.html">Reviews</a></li>
+                    <li> <a href="events.html">Events</a></li>
+                    <li><a href="live.html">Live</a></li>
+                    <li> <a href="contact.html">Contacts</a></li>
+                    <li> <a href="reservation.html">Reservations</a></li>
+                </ul>
+            </nav>
 
-                <label>Number of Guests</label>
-                <br>
-                <input placeholder="(maximum of 8 guests only)" id="input">
-                <br><br>
-
-                <label>Date</label>
-                <br>
-                <input placeholder="date" type="date" id="input">
-                <br><br>
-
-                <label>Time</label>
-                <br>
-                <input placeholder="time" type="time" id="input">
-                <br><br>
-
-                <button class="submission">Submit</button>
-
-            </form>
         </div>
 
-    </div>
-
-</body>
+    </body>
 
 </html>
