--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 
         <div class="logo">
             
-               <img src="https://cdn.prod.website-files.com/65aa1f78e2380ad0548de50d/65c0b0524cdc940f7455af22_logo.svg" alt="bullimage">
+               <img src="https://cdn.prod.website-files.com/65aa1f78e2380ad0548de50d/65c0b0524cdc940f7455af22_logo.svg" id="bullimage">
                 
         </div>
 
@@ -28,6 +28,30 @@
             </div>
 
         </div>
+
+
+      <div class="navigationbar">
+        <nav>
+            <ul>
+           <li><i class="fa fa-bars"></i></li> 
+           <i class="fa-solid fa-clock-two-thirty"></i>
+           <li> <a>Home</a></li> 
+           <li><a href="menu.html">Menu</a></li> 
+
+           <li> <a href="reviews.html">Reviews</a></li> 
+           <li> <a href="events.html">Events</a></li> 
+           <li><a href="live.html">Live</a></li> 
+           <li> <a href="contact.html">Contacts</a></li> 
+           <li> <a href="reservation.html">Reservations</a></li> 
+        </ul>
+    </nav>
+
+    </div>
+
+
+
+
+
 
     </body>
 </html>
