--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@
             <img src="images/record.jpeg">
             <div class="textss">
                 <p>pavilion</p>
-                <h3>Nairobi</h3>
+                <h3>Zanzibar</h3>
                 <p>Pax: 20-25</p>
                 <p>Open lighted filled event space | Corporate | Private functions</p>
                 <p>For more information</p> <br><p>0703212121</p> <br> <p>0701138345</p>
