--- a/meals.html
+++ b/meals.html
@@ -900,7 +900,7 @@
             <ul>
            <li><i class="fa fa-bars"></i></li> 
            <i class="fa-solid fa-clock-two-thirty"></i>
-           <li> <a>Home</a></li> 
+           <li> <a href="index.html">Home</a></li> 
            <li><a href="menu.html">Menu</a></li> 
 
            <li> <a href="reviews.html">Reviews</a></li> 
