--- a/reviews.html
+++ b/reviews.html
@@ -34,33 +34,16 @@
                 </a>
 
             </div>
-        </div>
-<!-- 
-        <div class="nav-bottom">
-            <a href="menu"><i class="fa-solid fa-bars"></i></a>
-            <a href="oclock"><i class="fa-solid fa-clock"></i></a>
-            <a href="/index.html" id="homenav">Home</a>
-            <a href="/menu.html" id="menunav">Menu</a>
-            <a href="/reviews.html" id="reviewnav">Reviews</a>
-            <a href="/events.html" id="eventsnav">Events</a>
-            <a href="live.html" id="livenav">Live</a>
-            <a href="/contacts.html" id="contactnav">Contact</a>
-            <a href="reservations.html" id="reservations">Reservations</a>
-        </div> -->
         <div class="reviewdetails">
             <div class="review" id="rev1">
                 <h1>REVIEW</h1>
                 <i class="fa-solid fa-quote-left" id="prev"></i>
-                <p>This place is run by educated, innovative &creative people! The architectural layout, seating,
-                    ambience, <br>
-                    lighting,cutlery: servings, design; has been impeccably well thought out! Even thewashrooms were<br>
-                    excellent!The food was AWESOME! This is surprising consideringthe fact we were there on a Saturday
-                    night <br>
-                    & they almost had no space!We were extremely well serviced too!Rare to find such finesse in Kenya!
-                    You <br>
-                    must go visit them!</p>
+                <p>Great food and atmosphere. The staff are <br>
+                    friendly and hardworking. We  stayed at this<br>
+                    location for a few hours, and made our way to the bonfire.The drinks are good too<br>
+                    be bback. A++</p>
 
-                <p>irfan virji<br>
+                <p>Erik Anderson<br>
                     KITISURU</p>
                 <i class="fa-solid fa-quote-right" id="next"></i>
             </div>
@@ -79,11 +62,11 @@
             <div class="review" id="rev3">
                 <h1>REVIEW</h1>
                 <i class="fa-solid fa-quote-left" id="prev"></i>
-                <p> Best place to eat out. If you want to have a niceromantic date this place is perfect. The food is
-                    fantastic only<br>
-                    be carefulcause the portions are bigger than you would expect.</p>
-                <p> Vladimiro Stivali<br>
-                    KITISURU</p>
+                <p> Awesome food and services. The mbuzi
+                    goat with plantains and green is a must<br>
+                    Bread pudding is best in town.Mutura also very good and fresh</p>
+                <p> Nuru Mugambi <br>
+                    KILIMANI</p>
                 <i class="fa-solid fa-quote-right" id="next"></i>
 
             </div>
