--- a/reviews.html
+++ b/reviews.html
@@ -19,15 +19,13 @@
                         class="header-logo w-inline-block w--current">
                         <img
                             src="https://cdn.prod.website-files.com/65aa1f78e2380ad0548de50d/65c0b0524cdc940f7455af22_logo.svg"
-                            loading="eager" width="200">
-
-                    </a>
-
+                            loading="eager" width="200"></a>
+                    
                 </div>
                 <div class="reviewdetails">
-                    <div class="review" id="rev1">
-                        <h1>REVIEW</h1>
-                        <i class="fa-solid fa-quote-left" id="prev"></i>
+                    <div class="review" id="testimonial1">
+                        <h1>Review</h1>
+                        <i class="fa-solid fa-quote-left" id="previous"></i>
                         <p>Great food and atmosphere. The staff are <br>
                             friendly and hardworking. We stayed at this<br>
                             location for a few hours, and made our way to the
@@ -36,11 +34,11 @@
 
                         <p>Erik Anderson<br>
                             KITISURU</p>
-                        <i class="fa-solid fa-quote-right" id="next"></i>
+                        <i class="fa-solid fa-quote-right" id="forward"></i>
                     </div>
-                    <div class="review" id="rev2">
-                        <h1>REVIEW</h1>
-                        <i class="fa-solid fa-quote-left" id="prev"></i>
+                    <div class="review" id="testimonial2">
+                        <h1>Review</h1>
+                        <i class="fa-solid fa-quote-left" id="previous"></i>
                         <p>Such a fantastic restaurant, I plan on being a
                             regularhere. The food is amazing the atmosphere is
                             so
@@ -52,50 +50,46 @@
                             visitthem!</p>
                         <p>Paul Kamau<br>
                             KITISURU</p>
-                        <i class="fa-solid fa-quote-right" id="next"></i>
+                        <i class="fa-solid fa-quote-right" id="forward"></i>
                     </div>
-                    <div class="review" id="rev3">
-                        <h1>REVIEW</h1>
-                        <i class="fa-solid fa-quote-left" id="prev"></i>
+                    <div class="review" id="testimonial3">
+                        <h1>Review</h1>
+                        <i class="fa-solid fa-quote-left" id="previous"></i>
                         <p> Awesome food and services. The mbuzi
                             goat with plantains and green is a must<br>
                             Bread pudding is best in town.Mutura also very good
                             and fresh</p>
                         <p> Nuru Mugambi <br>
                             KILIMANI</p>
-                        <i class="fa-solid fa-quote-right" id="next"></i>
+                        <i class="fa-solid fa-quote-right" id="forward"></i>
 
                     </div>
-                    <div>
-                        <button id="prev-button"><i
-                                class="fa-solid fa-square-chevron-left"></i></button>
-                        <button id="next-button"><i
-                                class="fa-solid fa-square-chevron-right"></i></button>
-                    </div>
+                
                     <script src="review.js"></script>
 
                 </div>
             </div>
-            <div class="navigationbar">
-                <nav>
-                    <ul>
-                        <li><i class="fa fa-bars"></i></li>
-                        <i class="fa-solid fa-clock-two-thirty"></i>
-                        <li> <a>Home</a></li>
-                        <li><a href="menu.html">Menu</a></li>
-
-                        <li> <a href="reviews.html">Reviews</a></li>
-                        <li> <a href="events.html">Events</a></li>
-                        <li><a href="live.html">Live</a></li>
-                        <li> <a href="contact.html">Contacts</a></li>
-                        <li> <a
-                                href="reservation.html">Reservations</a></li>
-                    </ul>
-                </nav>
-
-            </div>
 
         </div>
+        <div class="navigationbar">
+            <nav>
+                <ul>
+                    <li><i class="fa fa-bars"></i></li>
+                    <i class="fa-solid fa-clock-two-thirty"></i>
+                    <li> <a>Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+
+                    <li> <a href="reviews.html">Reviews</a></li>
+                    <li> <a href="events.html">Events</a></li>
+                    <li><a href="live.html">Live</a></li>
+                    <li> <a href="contact.html">Contacts</a></li>
+                    <li> <a
+                            href="reservation.html">Reservations</a></li>
+                </ul>
+            </nav>
+
+        </div>
+
     </body>
 
 </html>
