--- a/reviews.html
+++ b/reviews.html
@@ -117,7 +117,7 @@
         <li><a href="events.html" id="events">Events</a></li>
         <li> <a href="live.html" id="live">Live</a></li>    
         <li><a href="contacts.html" id="contacts">Contacts</a></li></li>
-        <li>  <div id="reservationsLink"><a href="reservations.html" >Reservations</a> </div></li>
+        <li>  <div id="reservationsLink"><a href="reservation.html" >Reservations</a> </div></li>
        </ul>
    </nav>
 
