--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
+            <meta http-equiv="Cache-Control" content="no-cache">
     </head>
 
     <body>
